<resources>
    <string name="app_name">MPAluno</string>

    <string name="novo">Novo</string>
    <string name="mapa">Mapa</string>
    <string name="mais_opcoes">Mais opções</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="provas">Provas</string>
    <string name="preferencias">Preferências</string>

    <string name ="ligar">Ligar</string>
    <string name ="enviarSMS">Enviar SMS</string>
    <string name ="acharNoMapa">Achar no mapa</string>
    <string name ="navegarSite">Navegar no site</string>
    <string name ="enviarEmail">Enviar e-mail</string>
    <string name ="deletar">Deletar</string>

</resources>
