<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_novo"
        android:icon="@drawable/ic_novo"
        app:showAsAction="always"
        android:title="@string/novo"/>

    <item
        android:id="@+id/menu_mapa"
        android:icon="@drawable/ic_mapa"
        app:showAsAction="always"
        android:title="@string/mapa"/>

    <item
        android:id="@+id/menu_opcoes"
        android:icon="@drawable/ic_opcoes"
        app:showAsAction="always"
        android:title="@string/mais_opcoes">
    <menu>
        <item
            android:id="@+id/menu_enviar_alunos"
            android:icon="@drawable/ic_enviar"
            app:showAsAction="always"
            android:title="@string/sincronizar"/>
        <item
            android:id="@+id/menu_receber_provas"
            android:icon="@drawable/ic_receber"
            app:showAsAction="always"
            android:title="@string/provas"/>
        <item
            android:id="@+id/menu_preferencias"
            android:icon="@drawable/ic_preferencias"
            app:showAsAction="always"
            android:title="@string/preferencias"/>
    </menu>
    </item>
</menu>